question two localStorage and sessionStorage briefly described

--- a/question.html
+++ b/question.html
@@ -61,14 +61,43 @@
         </div>
     </section>
     <!-- question and answer section start -->
-    <section>
-      <div class="container">
-        <h2 class="text-md text-gray-800 text-center">Q=>(1). What are the difference between map(),filter(), forEach(), find() methods in js?</h2>
-        <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span class="text-orange-800">Map():</span>The map() method calls a given function on each element of the original array, producing a new array with the results. The initial array is not changed.</p>
-        <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span class="text-orange-800">Filter():</span>The filter() method builds a fresh array of all the components that pass the test carried out by the supplied function. The initial array is left alone.</p>
-        <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span class="text-orange-800">forEach():</span>The forEach() method runs the supplied function once for each element of the array. It doesn't alter the initial array and doesn't produce a new array either.</p>
-        <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span class="text-orange-800">Find():</span>The find() method returns the value of the array's first element that satisfies the given testing function. The old array is not changed, nor is a new array created.</p>
-      </div>
+    <section class="container">
+        <div>
+            <h2 class="text-md text-gray-800 text-center">Q=>(1). What are the difference between map(),filter(),
+                forEach(), find() methods in js?</h2>
+            <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span
+                    class="text-orange-800">Map():</span>The map() method calls a given function on each element of the
+                original array, producing a new array with the results. The initial array is not changed.</p>
+            <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span
+                    class="text-orange-800">Filter():</span>The filter() method builds a fresh array of all the
+                components that pass the test carried out by the supplied function. The initial array is left alone.</p>
+            <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span
+                    class="text-orange-800">forEach():</span>The forEach() method runs the supplied function once for
+                each element of the array. It doesn't alter the initial array and doesn't produce a new array either.
+            </p>
+            <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center"><span
+                    class="text-orange-800">Find():</span>The find() method returns the value of the array's first
+                element that satisfies the given testing function. The old array is not changed, nor is a new array
+                created.</p>
+        </div>
+        <div>
+            <h2 class="text-md text-gray-800 text-center">Q=>(1). What are the difference between localStorage and
+                sessionStorage in js?</h2>
+            <p class="text-xs italic mt-1 mb-4 text-orange-800 text-center">
+                Modern browsers offer two storage options that let site designers store data on the client-side:
+                localStorage and sessionStorage. However there are some significant variations between the two.
+
+                Data scope and lifetime: The key distinction between localStorage and sessionStorage is the data scope
+                and lifetime that is kept in storage.
+
+                localStorage: Data stored with localStorage is kept on the user's device even when the browser window is
+                closed. Any JavaScript script from the same domain is able to access it.
+                   
+                SessionStorage: Data stored in a session is only accessible during that particular session. The data is
+                thus only accessible while the browser window or tab is active. The data is lost if the user closes the
+                tab or window.
+            </p>
+        </div>
     </section>
     <!-- Footer section start -->
     <footer class="py-10 text-center text-sm">
